    headers.
  * debian/copyright: remove license conditions of non-FAQ documents.
  * debian/rules: faq no longer is in FAQ/, but in .: adjust build rules.
  * debian/doc-base: imported from doc-debian-3.1.5/doc-base/debian-faq.
    updated list of authors.
  * debian/control: Bump Standards-Version from 3.6.2.0 to 3.7.3 (no changes
    needed.)
  * debian/{rules,control}: install de, fr, it and zh_CN translations too.
    Create new binary Debian packages debian-faq-de, debian-faq-fr,
    debian-faq-it, debian-faq-zh for translations which are somewhat up to
    date and not yet available as Debian packages.  Use debhelper's dh_install
    to deal with these multiple packages: we now build-depend upon debhelper.
    When at it, use dh_installdeb, dh_gencontrol, dh_md5sums and dh_builddeb
    too.
    - debian/compat: enforce debhelper compatibility level 5.
    - debian/rules: build needed languages (de, fr, it and zh_CN) only.
    - debian/debian-faq-{de,fr,it,zh}.{dirs,install}: add debhelper files
      for building extra binary packages.
  * Update the content of the FAQ files to their latest SVN
    versions, from svn.debian.org ddp/manuals/faq:
     - changes by joostvb, 2008-03-24 - 2008-03-29
        * uptodate.sgml: remove remark only relevant to < etch
        * software.sgml: do not explicitly mention lenny: make text more
          stable
        * compat.sgml: get rid of & in url: make sure typesetters do not
          choke on it
        * nexttime.sgml: remove obsolete entry on security
        * nexttime.sgml: add entry on d-i and on releasegoal "Dependency
          based boot sequence"
        * nexttime.sgml: port to netbsd is stalled, freebsd is getting
          better
        * nexttime.sgml: mention new armel port. update SuperH status. drop
          amd64: of course we support that: old news
        * nexttime.sgml: add some lenny release goals about i18n from
          http://release.debian.org/lenny/goals.txt