@@ -17,17 +17,20 @@ debian-faq (3.1.6) UNRELEASED; urgency=high
     updated list of authors.
   * debian/control: Bump Standards-Version from 3.6.2.0 to 3.7.3 (no changes
     needed.)
-  * debian/{rules,control}: install de, fr, it and zh_CN translations too.
-    Create new binary Debian packages debian-faq-de, debian-faq-fr,
+  * Create new binary Debian packages debian-faq-de, debian-faq-fr,
     debian-faq-it, debian-faq-zh for translations which are somewhat up to
     date and not yet available as Debian packages.  Use debhelper's dh_install
     to deal with these multiple packages: we now build-depend upon debhelper.
     When at it, use dh_installdeb, dh_gencontrol, dh_md5sums and dh_builddeb
     too.
+    - debian/{rules,control}: install de, fr, it and zh_CN translations too.
     - debian/compat: enforce debhelper compatibility level 5.
     - debian/rules: build needed languages (de, fr, it and zh_CN) only.
     - debian/debian-faq-{de,fr,it,zh}.{dirs,install}: add debhelper files
       for building extra binary packages.
+    - debian/rules: use debhelper's dh_installchangelog and dh_installdocs to
+      handle debian/{copyright,changelog} and doc-base stuff.  add needed
+      dh_clean calls.
   * Update the content of the FAQ files to their latest SVN
     versions, from svn.debian.org ddp/manuals/faq:
      - changes by joostvb, 2008-03-24 - 2008-03-29
